--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.4",
     "react-redux": "^9.1.0",
+    "react-router": "^7.1.1",
     "uuid": "^9.0.1",
     "yup": "^1.3.3"
   },
